# OpenCLKinectTornado

./: .gitignore  CMakeLists.txt  KinectTornado.cl  KinectTornado.cpp  KinectTornado.sln  KinectTornado.vcxproj  KinectTornado.vcxproj.filters  KinectWrapper.cpp  KinectWrapper.h  README.md  VC10_win32.bat  main.cpp
